# games

./: .gitignore  README.md  RL_SETUP.md  assertion_improvements.md  boundary_and_random_tests_summary.md  config.yaml  env_registration.py  evaluate_rl.py  negative_testing_enhancement_report.md  parametrized_testing_patterns.md  property_testing_implementation_report.md  pyproject.toml  test_reward_debug.py  train_rl.py
scripts/: compare_masked_vs_unmasked.py  dev.py  eval_vs_random.py  evaluate_rl.py  evaluate_rl_masked.py  gui.py  random_vs_random.py  train_rl.py  train_rl_masked.py  train_rl_random.py
src/utttrlsim/: __init__.py  board.py  env.py  env_registration.py  main.py  random_opponent_wrapper.py
src/utttrlsim/agent/: __init__.py
src/utttrlsim/agents/: random.py
src/utttrlsim/policies/: __init__.py  random.py
src/utttrlsim/wrapper/: random_opponent_wrapper.py
src/utttrlsim/wrappers/: __init__.py  self_play.py
super-ox/: README.md  pyproject.toml
super-ox/src/utttrlsim/: board.py  main.py
super-ox/src/utttrlsim/agents/: __init__.py
super-ox/tests/: __init__.py  test_board.py  test_env.py
tests/: test_board.py  test_board_property.py  test_edge_cases.py  test_env.py  test_parametrized_patterns.py  test_property_based.py
